--- a/res/values-nn-rNO/strings.xml
+++ b/res/values-nn-rNO/strings.xml
@@ -6,14 +6,14 @@
     <string name="app_version" formatted="false">XPrivacy versjon: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed rammeverk versjon: %d</string>
     <string name="app_copyright">Opphavsbeskyttet \u00A9 M. Bokhorst (M66B) 2013</string>
-    <string name="menu_usage">Bruk</string>
+    <string name="menu_usage">Databruk</string>
     <string name="menu_refresh">Oppdater</string>
     <string name="menu_settings">Innstillinger</string>
     <string name="menu_template">Skjema</string>
     <string name="menu_report">Rapporter en feil</string>
     <string name="menu_export">Eksporter</string>
     <string name="menu_import">Importer</string>
-    <string name="menu_submit">Angi restriksjoner</string>
+    <string name="menu_submit">Last opp restriksjoner</string>
     <string name="menu_fetch">Hent restriksjoner</string>
     <string name="menu_theme">Bytt tema</string>
     <string name="menu_pro">Pro versjon</string>
@@ -21,8 +21,8 @@
     <string name="menu_help">Hjelp</string>
     <string name="menu_all">Alle</string>
     <string name="menu_restriction_all">Skift restriksjoner</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_all">Nullstill alt</string>
+    <string name="menu_restrict_all">Blokk alt</string>
     <string name="menu_usage_all">Skift filter</string>
     <string name="menu_apply">Bruk skjema</string>
     <string name="menu_clear">Slett</string>
@@ -36,10 +36,10 @@
     <string name="msg_update">Oppdater</string>
     <string name="msg_licensed" formatted="false">Lisensert til: %s</string>
     <string name="msg_loading">Lader</string>
-    <string name="msg_applying">Applying</string>
-    <string name="msg_applied">Template applied</string>
-    <string name="msg_saved_to" formatted="false">Saved to %s</string>
-    <string name="msg_no_restrictions">No restrictions found</string>
+    <string name="msg_applying">Legger til endringer</string>
+    <string name="msg_applied">Skjema i bruk</string>
+    <string name="msg_saved_to" formatted="false">Lagre till %s</string>
+    <string name="msg_no_restrictions">Ingen restriksjoner funnet</string>
     <string name="msg_edit">Klikk på app ikonet for å bearbeide alle restriksjoner</string>
     <string name="msg_sure">Er du sikker?</string>
     <string name="msg_done">Ferdig</string>
@@ -47,8 +47,8 @@
     <string name="msg_random_now">Tilfeldige verdier</string>
     <string name="msg_random_access">Tilfeldige verdier ved tilgang</string>
     <string name="msg_random_boot">Tilfeldige verdier etter omstart</string>
-    <string name="msg_usage">Updating usage data</string>
-    <string name="msg_restart">Application restart required</string>
+    <string name="msg_usage">Oppdaterer databruk</string>
+    <string name="msg_restart">Omstart av appen nødvendig</string>
     <string name="msg_first"><b>XPrivacy er grundig utviklet og testet, men det er umulig å garantere at Appen fungerer feilfritt på alle enheter og for alle applikasjoner.\n\nAppen brukes på egen risiko.</b>\n\nSe også lisensen:</string>
     <string name="restrict_accounts">Konto (Google, Facebook, osv.)</string>
     <string name="restrict_browser">Nettleser (bokmerker/historikk)</string>
@@ -65,7 +65,7 @@
     <string name="restrict_messages">Meldinger (SMS, MMS)</string>
     <string name="restrict_network">Nettverk (adresser)</string>
     <string name="restrict_notifications">Varslinger</string>
-    <string name="restrict_overlay">Overlay</string>
+    <string name="restrict_overlay">Overlay (overlapping)</string>
     <string name="restrict_phone">Telefon (ID, nummere, oppringninger)</string>
     <string name="restrict_sensors">Sensorer</string>
     <string name="restrict_storage">Minne (medier, SD kort)</string>
@@ -107,16 +107,16 @@
     <string name="settings_usage">Android data bruk (omstart nødvendig)</string>
     <string name="settings_log">Feilsøkingsloggfil (omstart nødvendig)</string>
     <string name="settings_expert">Ekspert modus</string>
-    <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_dangerous">Blokker farlige funksjoner</string>
     <string name="help_application">App</string>
     <string name="help_internet">har internet tillatelse</string>
     <string name="help_granted">har Android tillatelse</string>
     <string name="help_used">har benyttet denne typen av data</string>
     <string name="help_frozen">er deaktivert</string>
     <string name="help_dangerous">er farlig</string>
-    <string name="help_half">partly restricted</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
+    <string name="help_half">delvis blokkert</string>
+    <string name="help_attention">restriksjoner trenger oppmerksomhet</string>
+    <string name="help_restricted">restriksjoner ble forandret</string>
+    <string name="help_shared">restriksjoner ble lastet opp</string> 
 
 </resources>
