--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Lizenziert für: %s</string>
     <string name="msg_loading">Lade...</string>
     <string name="msg_applying">Übernehme</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applied">Template übernommen</string>
     <string name="msg_saved_to" formatted="false">Gespeichert nach %s</string>
     <string name="msg_no_restrictions">Keine Beschränkung gefunden</string>
     <string name="msg_edit">Berühren Sie das App-Icon, um alle Berechtigungen zu bearbeiten.</string>
@@ -89,7 +89,7 @@
     <string name="title_frestricted">Nach Beschränkungen filtern</string>
     <string name="title_fuser">Nach Benutzer-Apps filtern</string>
     <string name="title_fsystem">Nach System-Apps filtern</string>
-    <string name="title_fnot">Negate</string>
+    <string name="title_fnot">Negieren</string>
     <string name="settings_serial">Seriennummer</string>
     <string name="settings_lat">Breitengrad</string>
     <string name="settings_lon">Längengrad</string>
@@ -102,7 +102,7 @@
     <string name="settings_operator">Mobilfunkanbieter</string>
     <string name="settings_subscriber">Subscriber-ID</string>
     <string name="settings_ua">User-Agent (Browser)</string>
-    <string name="settings_general">General</string>
+    <string name="settings_general">Allgemein</string>
     <string name="settings_fake_data">Daten manipulieren</string>
     <string name="settings_global">Benutze globale gefälschte Daten</string>
     <string name="settings_notify">Update-Benachrichtigungen</string>
@@ -117,8 +117,8 @@
     <string name="help_frozen">ist deaktiviert</string>
     <string name="help_dangerous">Beschränkung bedenklich (eventueller App-Absturz)</string>
     <string name="help_half">teilweise beschränkt</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
+    <string name="help_attention">Beschränkungen bedarfen Beachtung</string>
+    <string name="help_restricted">Beschränkungen werden geändert</string>
+    <string name="help_shared">Beschränkungen werden eingereicht</string>
 
 </resources>
