--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Bản quyền: %s</string>
     <string name="msg_loading">Đang tải</string>
     <string name="msg_applying">Đang áp dụng</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applied">Thiết lập mẫu đã được áp dụng</string>
     <string name="msg_saved_to" formatted="false">Đã được lưu vào %s</string>
     <string name="msg_no_restrictions">Không có thông tin hạn chế nào được tìm thấy</string>
     <string name="msg_edit">Chạm vào biểu tượng ứng dụng để thay đổi các thiết lập</string>
@@ -116,8 +116,8 @@
     <string name="help_frozen">đã được tắt</string>
     <string name="help_dangerous">nguy hiểm, hạn chế có thể gây lỗi</string>
     <string name="help_half">đã hạn chế một phần</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
+    <string name="help_attention">các sự hạn chế cần xem xét</string>
+    <string name="help_restricted">các sự hạn chế đã được thay đổi</string>
+    <string name="help_shared">các sự hạn chế đã được gửi đi</string>
 
 </resources>
