--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,13 +20,13 @@
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
     <string name="menu_help">Hilfe</string>
-    <string name="menu_select_all">Select all</string>
+    <string name="menu_select_all">Alle auswählen</string>
     <string name="menu_all">Alles (beschränkt)</string>
     <string name="menu_restriction_all">Beschränkungen invertieren</string>
     <string name="menu_clear_all">Alles löschen</string>
     <string name="menu_restrict_all">Alles beschränken</string>
     <string name="menu_clear_usage">Löschen</string>
-    <string name="menu_usage_all">Filter invertieren</string>
+    <string name="menu_usage_all">Filter umkehren</string>
     <string name="menu_apply">Template übernehmen</string>
     <string name="menu_clear">Nichts (beschränkt)</string>
     <string name="menu_app_launch">Öffnen</string>
@@ -46,8 +46,8 @@
     <string name="msg_saved_to" formatted="false">Gespeichert nach %s</string>
     <string name="msg_no_restrictions">Keine Beschränkung gefunden</string>
     <string name="msg_sure">Sind Sie sicher?</string>
-    <string name="msg_select">Please select some applications</string>
-    <string name="msg_limit">Please select fewer than %d applications</string>
+    <string name="msg_select">Bitte wählen Sie einige Apps aus</string>
+    <string name="msg_limit">Bitte wählen Sie weniger als %d App(s) aus</string>
     <string name="msg_done">Fertig</string>
     <string name="msg_reboot">Geräteneustart erforderlich</string>
     <string name="msg_random_now">Zufallswerte erzeugen</string>
@@ -122,7 +122,7 @@
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
     <string name="help_used">hat diese Daten benutzt</string>
-    <string name="help_used_grayed">no usage data available</string>
+    <string name="help_used_grayed">keine Usage-Data verfügbar</string>
     <string name="help_frozen">ist deaktiviert</string>
     <string name="help_dangerous">Beschränkung bedenklich (eventueller App-Absturz)</string>
     <string name="help_half">teilweise beschränkt</string>
@@ -135,6 +135,6 @@
 \nTippen Sie auf das App-Icon für detaillierte Beschränkungen und Einstellungen</string>
     <string name="tutorial_detailsheader">Tippen Sie auf das App-Icon für weitere Aktionen</string>
     <string name="tutorial_detailslist">Tippen Sie auf den Pfeil, um die Ausnahmen-Funktionen von einer beschränkten Kategorie zu sehen</string>
-    <string name="permission_manage">Manage applications, including killing</string>
+    <string name="permission_manage">Verwalte Apps, inklusive Beenden (kill)</string>
 
 </resources>
