--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -58,7 +58,7 @@
     <string name="msg_random_access">Willekeurig bij gebruik</string>
     <string name="msg_random_boot">Willekeurig na herstart</string>
     <string name="msg_restart">Applicatie herstart vereist</string>
-    <string name="msg_register">Registreer uw apparaat a.u.b.</string>
+    <string name="msg_register">Registreer a.u.b. uw apparaat</string>
     <string name="msg_registered">Controleer uw e-mail om uw apparaat te activeren</string>
     <string name="msg_service">Bijwerkdienst actief</string>
     <string name="msg_migrating" formatted="false">Migratie %s</string>
