--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -44,8 +44,8 @@
     <string name="msg_new">Nieuw</string>
     <string name="msg_update">Bijgewerkt</string>
     <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
-    <string name="msg_loading">Laden</string>
-    <string name="msg_applying">Toepassen</string>
+    <string name="msg_loading">Laden &#8230;</string>
+    <string name="msg_applying">Toepassen &#8230;</string>
     <string name="msg_applied">Sjabloon toegepast</string>
     <string name="msg_saved_to" formatted="false">Bewaard als %s</string>
     <string name="msg_no_restrictions">Geen beperkingen gevonden</string>
