--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,8 +49,8 @@
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
-    <string name="msg_loading">Loading</string>
-    <string name="msg_applying">Applying</string>
+    <string name="msg_loading">Loading &#8230;</string>
+    <string name="msg_applying">Applying &#8230;</string>
     <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
