--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">تعليمي</string>
     <string name="menu_exclude">إستبعاد</string>
     <string name="menu_close">إغلاق</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">إيقاف</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">جديد</string>
