--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Příručka</string>
     <string name="menu_exclude">Vyloučit</string>
     <string name="menu_close">Zavřít</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Probíha přerušení</string>
     <string name="msg_aborted">Přerušeno</string>
     <string name="msg_new">Nové</string>
