--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Tutorial</string>
     <string name="menu_exclude">Exclude</string>
     <string name="menu_close">Close</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Aborting</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Ny</string>
