--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Tutorial</string>
     <string name="menu_exclude">Ausschließen</string>
     <string name="menu_close">Schließen</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Abbrechen</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Neu</string>
