--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Didacticiel</string>
     <string name="menu_exclude">Exclure</string>
     <string name="menu_close">Fermer</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Arrêt en cours</string>
     <string name="msg_aborted">Arrêté</string>
     <string name="msg_new">Nouv. :</string>
