--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -43,6 +43,7 @@
     <string name="menu_tutorial">Instrukcija</string>
     <string name="menu_exclude">Išskirti</string>
     <string name="menu_close">Uždaryti</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Nutraukti</string>
     <string name="msg_aborted">Atmesti</string>
     <string name="msg_new">Naujas</string>
