--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Samouczek</string>
     <string name="menu_exclude">Wyklucz</string>
     <string name="menu_close">Zamknij</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Przerywanie</string>
     <string name="msg_aborted">Przerwano</string>
     <string name="msg_new">Nowa aplikacja</string>
