--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_tutorial">Príručka</string>
     <string name="menu_exclude">Vylúčiť</string>
     <string name="menu_close">Zavrieť</string>
+    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Rušenie</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Nové</string>
