--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -42,7 +42,7 @@
     <string name="menu_tutorial">Zelfstudie</string>
     <string name="menu_exclude">Sluit uit</string>
     <string name="menu_close">Sluiten</string>
-    <string name="menu_category">Act on the entire category</string>
+    <string name="menu_category">Geldt voor de gehele categorie</string>
     <string name="msg_abort">Afbreken</string>
     <string name="msg_aborted">Afgebroken</string>
     <string name="msg_new">Nieuw</string>
