--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -13,7 +13,7 @@
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Šablonai</string>
     <string name="menu_report">Pranešti problemas</string>
-    <string name="menu_export">Exportuoti</string>
+    <string name="menu_export">Eksportuoti</string>
     <string name="menu_import">Importuoti</string>
     <string name="menu_submit">Pateikti leidimus į serverį</string>
     <string name="menu_fetch">Gauti leidimus iš serverio</string>
@@ -112,16 +112,16 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_supdated">Pagal atnaujinimo datą</string>
     <string name="title_smodified">Pagal modifikavimo datą (XPrivacy)</string>
     <string name="title_sinvert">Atvirkštinė rūšiavimo tvarka</string>
-    <string name="title_attempt">Usage attempt of:</string>
-    <string name="title_category">Category:</string>
-    <string name="title_function">Function:</string>
-    <string name="title_parameters">Parameters:</string>
+    <string name="title_attempt">Bando naudoti:</string>
+    <string name="title_category">Kategorija:</string>
+    <string name="title_function">Funkcija:</string>
+    <string name="title_parameters">Parameterai:</string>
     <string name="title_applycat">Taikyti esamoje kategorijoje</string>
     <string name="title_once">Vieną kartą %1$s sekundžių</string>
     <string name="title_allow">Leisti</string>
     <string name="title_deny">Drausti</string>
     <string name="title_pleasesubmit">Prašome pateikti savo apribojimus padėti kitiems</string>
-    <string name="title_permissions">Permissions</string>
+    <string name="title_permissions">Leidimai</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
@@ -142,7 +142,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_log">DEBUG žurnalas (Perkrauti prietaisą)</string>
     <string name="settings_expert">Eksperto režimas</string>
     <string name="settings_dangerous">Apriboti pavojingas funkcijas</string>
-    <string name="settings_confidence">maksimalaus pasitikėjimo gavimo intervalas</string>
+    <string name="settings_confidence">Maks. pasitikėjimo gavimo intervalas</string>
     <string name="settings_experimental">Eksperimentinės funkcijos (Perkrauti prietaisą)</string>
     <string name="settings_https">Naudojamas saugus ryšys</string>
     <string name="settings_syscomponents">Riboti sistemos komponentus (Android) (reikia perkrauti)</string>
